fixed overflow issue and centered scatterplots on medium+ screens

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -20,10 +20,5 @@ div.card-header{
 
 
 
-@media only screen and (min-width: 768px) {
-    
-.distribution{
-     overflow: auto;
-}
 
-}    
+
